Fixed shift in left navigation menu

--- a/05_online-auction/src/shared/components/LeftNavigation/index.scss
+++ b/05_online-auction/src/shared/components/LeftNavigation/index.scss
@@ -99,3 +99,9 @@
     }
   }
 }
+
+.fas {
+  display: flex;
+  width: 25px;
+  justify-content: center;
+}
